Actions
Bug #13517
closedlibeti: multiply-defined symbols
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 10:
ld: fatal: symbol '__i_size' is multiply-defined: (file ../common/mapfile-vers type=OBJT; file pics/regcmp.o type=OBJT); ld: fatal: symbol '__loc1' is multiply-defined: (file ../common/mapfile-vers type=OBJT; file pics/regex.o type=OBJT); ld: fatal: file processing errors. No output written to libform.so.1 collect2: error: ld returned 1 exit status *** Error code 1 dmake: Fatal error: Command failed for target `libform.so.1' Current working directory /code/illumos-gate/usr/src/lib/libeti/form/i386
Testing done: build/install/boot.
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 518a3de174fca27c87a655a6dab31dc0d75a66a9
commit 518a3de174fca27c87a655a6dab31dc0d75a66a9 Author: Toomas Soome <tsoome@me.com> Date: 2021-03-12T06:44:43.000Z 13517 libeti: multiply-defined symbols Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions